# floe

./: .gitignore  README.md  default.nix  flake.nix  nilla.nix
.github/workflows/: appstream-backfill.yml  appstream.yml  build.yml
appstream/: aarch64-linux.json  x86_64-linux.json
builder/: Cargo.toml  default.nix
builder/src/: aggregate.rs  appstream.rs  build_json.rs  main.rs  manifest.rs  nix.rs
builder/src/pipeline/: aggregate.rs  build_one.rs  list.rs  mod.rs  regenerate.rs
builder/src/source/: flake.rs  legacy.rs  mod.rs  nilla.rs
builder/src/wrappers/: mod.rs  trim.nix  trim.rs
builds/com.mitchellh.ghostty/: aarch64-linux.json  x86_64-linux.json
builds/dev.nilla.Cli/: aarch64-linux.json  x86_64-linux.json
builds/io.github.eza_community.eza/: aarch64-linux.json  x86_64-linux.json
builds/org.prismlauncher.PrismLauncher/: x86_64-linux.json
nix/: appstream-data.nix  packages.nix
nix/shells/: ci.nix  default.nix
npins/: sources.json
registry/com.mitchellh.ghostty/: manifest.json
registry/dev.nilla.Cli/: manifest.json  metainfo.xml
registry/io.github.eza_community.eza/: manifest.json  metainfo.xml
registry/org.prismlauncher.PrismLauncher/: manifest.json
