[package]
name = "floe-builder"
version = "0.0.1"
edition = "2024"
license = "GPL-3.0-or-later"

[[bin]]
name = "floe-builder"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
flate2 = "1"
gio = "0.22"
libappstream = { git = "https://gitlab.gnome.org/vlinkz/libappstream-rs.git", branch = "0.5" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
